syntax = "proto3";
package OpenIMServer.rtc;
import "sdkws/sdkws.proto";
option go_package = "github.com/OpenIMSDK/Open-IM-Server/pkg/proto/rtc";

message SignalMessageAssembleReq {
 sdkws.SignalReq signalReq = 1;
 string operationID = 2;
}

message SignalMessageAssembleResp {
 bool isPass = 1;
 sdkws.SignalResp signalResp = 2;
 sdkws.MsgData msgData = 3;
}

message SignalGetRoomsReq {
 string roomID = 1;
}

message SignalGetRoomsResp {
  repeated sdkws.SignalGetRoomByGroupIDReply rooms = 1;
}

service RtcService {
 rpc SignalMessageAssemble(SignalMessageAssembleReq) returns(SignalMessageAssembleResp);
 rpc SignalGetRooms(SignalGetRoomsReq) returns(SignalGetRoomsResp);
}
